# zirconia

./: .gitattributes  .gitignore  Cargo.toml  chk.sh  doc.sh  flake.nix  nix-shell.sh  run.sh  rustfmt.toml
src/zirconia/: Cargo.toml
src/zirconia/src/: app.rs  heatmap.rs  listener.rs  main.rs  math.rs  newtype_macro.rs  prelude.rs
src/zirconia/src/app/: bucket.rs  heatmap.rs
