[package]
name = "zirconia"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
iced = { version = "0.14.0", features = ["tokio", "x11"] }
kanal.workspace = true
no_std_io2.workspace = true
rdev.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true, features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber.workspace = true
tracing-tracy.workspace = true
x-win = { workspace = true, features = ["x11"] }
