[package]
name = "zirconia"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { workspace = true, features = ["debug", "tokio", "x11", "time-travel"] }
# iced_comet = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
kanal.workspace = true
no_std_io2.workspace = true
rdev = { workspace = true, features = ["serde", "serialize"] }
ron.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["fs", "io-util", "time"] }
tracing = { workspace = true, features = [
  "max_level_trace",
  "release_max_level_info",
] }
tracing-subscriber.workspace = true
tracing-tracy.workspace = true
x-win = { workspace = true, features = ["x11"] }
tracing-log.workspace = true
